[+BUGFIX] Fix overflow & styling issues with HTML editor.
Original-Commit-Hash: 26d6a03a733819791c807cc53cfac9909fd15ff9

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_style-workInProgress.scss
@@ -165,7 +165,18 @@ button.t3-create-new-content {
 }
 
 // HTML editor
+
 .t3-htmleditor-window {
 	width: 800px;
 	height: 400px;
+	font-size: 13px;
+
+	.CodeMirror-scroll {
+		height: 400px;
+	}
+	.CodeMirror pre {
+		overflow-y: hidden;
+	}
 }
+
+// HTML editor
